@@ -15,7 +15,14 @@
  */
 package io.datarouter.scanner;
 
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collections;
+import java.util.HashSet;
+import java.util.LinkedList;
 import java.util.List;
+import java.util.TreeSet;
+import java.util.Vector;
 import java.util.stream.Stream;
 
 import org.testng.Assert;
@@ -26,10 +33,25 @@ public class ScannerTests{
 	@Test
 	public void testScannerOf(){
 		Assert.assertSame(Scanner.of().getClass(), EmptyScanner.class);
+		Assert.assertSame(Scanner.of(List.of()).getClass(), EmptyScanner.class); // via RandomAccessScanner
+
 		Assert.assertSame(Scanner.of(1).getClass(), ObjectScanner.class);
+
 		Assert.assertSame(Scanner.of(1, 2).getClass(), ArrayScanner.class);
-		Assert.assertSame(Scanner.of(List.of(1)).getClass(), IteratorScanner.class);
+
+		Assert.assertSame(Scanner.of(List.of(1)).getClass(), RandomAccessScanner.class);
+		// Collections.unmodifiableList returns UnmodifiableRandomAccessList if the input is RandomAccess
+		Assert.assertSame(Scanner.of(Collections.unmodifiableList(List.of(1))).getClass(), RandomAccessScanner.class);
+		Assert.assertSame(Scanner.of(Arrays.asList(1)).getClass(), RandomAccessScanner.class);
+		Assert.assertSame(Scanner.of(new ArrayList<>(List.of(1))).getClass(), RandomAccessScanner.class);
+		Assert.assertSame(Scanner.of(new Vector<>(List.of(1))).getClass(), RandomAccessScanner.class);
+
+		Assert.assertSame(Scanner.of(new LinkedList<>(List.of(1))).getClass(), IteratorScanner.class);
+		Assert.assertSame(Scanner.of(new HashSet<>(List.of(1))).getClass(), IteratorScanner.class);
+		Assert.assertSame(Scanner.of(new TreeSet<>(List.of(1))).getClass(), IteratorScanner.class);
 		Assert.assertSame(Scanner.of(List.of(1).iterator()).getClass(), IteratorScanner.class);
+		Assert.assertSame(Scanner.of(Stream.of(1).iterator()).getClass(), IteratorScanner.class);
+
 		Assert.assertSame(Scanner.of(Stream.of(1)).getClass(), StreamScanner.class);
 	}
 
